# sqlitables

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-build.yml  pypi-publish.yml  pypi-test.yml
docs/: reference.md  usage.md
src/sqlitables/: __init__.py  classes.py  connection.py
